--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -2,3 +2,11 @@
   justify-content: space-evenly;
 }
 
+.title{
+  font-size: xx-large;
+  font-weight: 600;
+}
+
+.description{
+  font-size: large;
+}
